# sensor_calibration

./: .gitignore  CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.hpp  README.md  analyse.py  calibration.cpp  folderToHost.bat
calibration_lib/: CMakeLists.txt
calibration_lib/include/: Constants.hpp  GlobalVariables.hpp  HelperFunctions.hpp
include/: Constants.hpp  HelperFunctions.hpp  OptionHandlers.hpp
measurements/infrared/-CARTONCINI/cartoncinobiancoliscio1/: 030mm.csv  031mm.csv  032mm.csv  033mm.csv  034mm.csv  035mm.csv  036mm.csv  037mm.csv  038mm.csv  039mm.csv  040mm.csv  041mm.csv  042mm.csv  043mm.csv  044mm.csv  045mm.csv  046mm.csv  047mm.csv  048mm.csv  049mm.csv  050mm.csv  051mm.csv  052mm.csv  053mm.csv  054mm.csv  055mm.csv  056mm.csv  057mm.csv  058mm.csv  059mm.csv  060mm.csv  061mm.csv  062mm.csv  063mm.csv  064mm.csv  065mm.csv  066mm.csv  067mm.csv  068mm.csv  069mm.csv  (+101 more)
measurements/infrared/-CARTONCINI/cartoncinobiancoliscio2/: 030mm.csv  031mm.csv  032mm.csv  033mm.csv  034mm.csv  035mm.csv  036mm.csv  037mm.csv  038mm.csv  039mm.csv  040mm.csv  041mm.csv  042mm.csv  043mm.csv  044mm.csv  045mm.csv  046mm.csv  047mm.csv  048mm.csv  049mm.csv  050mm.csv  051mm.csv  052mm.csv  053mm.csv  054mm.csv  055mm.csv  056mm.csv  057mm.csv  058mm.csv  059mm.csv  060mm.csv  061mm.csv  062mm.csv  063mm.csv  064mm.csv  065mm.csv  066mm.csv  067mm.csv  068mm.csv  069mm.csv  (+101 more)
measurements/infrared/-CARTONCINI/cartoncinonerocalibrato/: 030mm.csv  031mm.csv  032mm.csv  033mm.csv  034mm.csv  035mm.csv  036mm.csv  037mm.csv  038mm.csv  039mm.csv
measurements/infrared/cartoncinonero/: 000mm.csv  005mm.csv  010mm.csv  015mm.csv  020mm.csv  025mm.csv  030mm.csv  035mm.csv  040mm.csv  045mm.csv  050mm.csv  055mm.csv  060mm.csv  065mm.csv  070mm.csv  075mm.csv  080mm.csv  085mm.csv  090mm.csv  095mm.csv  100mm.csv  105mm.csv  110mm.csv  115mm.csv  120mm.csv  125mm.csv  130mm.csv  135mm.csv  140mm.csv  145mm.csv  150mm.csv  155mm.csv  160mm.csv  165mm.csv  170mm.csv
measurements/infrared/cartoncinonero/stats/: dev_std_max.txt  dev_std_media.txt  stats.csv
src/: HelperFunctions.cpp  OptionHandlers.cpp  calibration.cpp
